<resources>
    <string name="app_name">Calculator</string>
    <string name="button1_name">1</string>
    <string name="button2_name">2</string>
    <string name="button3_name">3</string>
    <string name="button4_name">4</string>
    <string name="button5_name">5</string>
    <string name="button6_name">6</string>
    <string name="button7_name">7</string>
    <string name="button8_name">8</string>
    <string name="button9_name">9</string>
    <string name="buttonDot_name">.</string>
    <string name="button0_name">0</string>
    <string name="buttonC_name">C</string>
    <string name="buttonAdd_name">+</string>
    <string name="buttonSub_name">-</string>
    <string name="buttonMulti_name">*</string>
    <string name="buttonDiv_name">/</string>
    <string name="buttonEqual_name">=</string>



</resources>