<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="269dp">

        <EditText
            android:id="@+id/textView"
            android:layout_width="335dp"
            android:layout_height="84dp"
            android:layout_centerInParent="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="76dp"
            android:backgroundTint="@color/colorAccent"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button1_name"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FF0000"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="214dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button2_name"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="214dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button3_name"
                    tools:layout_editor_absoluteX="217dp"
                    tools:layout_editor_absoluteY="214dp" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttonAdd_name"
                    tools:layout_editor_absoluteX="310dp"
                    tools:layout_editor_absoluteY="214dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button4_name"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="279dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button5_name"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="279dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button6_name"
                    tools:layout_editor_absoluteX="217dp"
                    tools:layout_editor_absoluteY="279dp" />

                <Button
                    android:id="@+id/buttonSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttonSub_name"
                    tools:layout_editor_absoluteX="310dp"
                    tools:layout_editor_absoluteY="279dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button7_name"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="348dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button8_name"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="348dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button9_name"
                    tools:layout_editor_absoluteX="217dp"
                    tools:layout_editor_absoluteY="348dp" />

                <Button
                    android:id="@+id/buttonMulti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttonMulti_name"
                    tools:layout_editor_absoluteX="310dp"
                    tools:layout_editor_absoluteY="344dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttonDot_name"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="418dp" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/button0_name"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="418dp" />

                <Button
                    android:id="@+id/buttonC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttonC_name"
                    tools:layout_editor_absoluteX="217dp"
                    tools:layout_editor_absoluteY="418dp" />

                <Button
                    android:id="@+id/buttonDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/buttonDiv_name"
                    tools:layout_editor_absoluteX="310dp"
                    tools:layout_editor_absoluteY="417dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/buttonEqual_name"
            android:backgroundTint="@color/colorAccent"/>
    </RelativeLayout>

</LinearLayout>